# MatchingEngine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
benchmark/: CMakeLists.txt  benchmark.cpp
boost/: CMakeLists.txt
demos/: CMakeLists.txt  DemoAsyncClient.cpp  DemoAsyncServer.cpp  DemoClient.cpp  DemoServer.cpp  asio_poc.cpp  message.h  message.pb.cc  message.pb.h  message.proto
gbase/: ByteBuffer.hpp  CMakeLists.txt  GMessage.cpp  GMessage.h  ObjectPool.hpp  gLockFreeQueue.h  gLog.h  gMessageProcessor.h  gThreadPool.h
gbase/logging/: gLog.h
gbase/net/: Defs.h  GClient.cpp  GClient.h  GServer.cpp  GServer.h  GSocket.h  gProtocol.hpp
gbase/utils/: Common.h  defs.h
src/: CMakeLists.txt  cli_demo.cpp
src/benchmark/: benchmark.cpp
src/matching/: MEClient.cpp  MEServer.cpp  MatchingEngine.cpp  MatchingEngine.hpp
src/matching/exchange/: OrderMatchingEngine.h
src/matching/exchange/data/: Order.cpp  Order.h  OrderBook.cpp  OrderBook.h
src/matching/gbase/: gLockFreeQueue.h  gMemoryPool.h  gThread.h  gThreadPool.h
src/matching/refdata/data/: Instrument.cpp  Instrument.h  Issuer.h  User.h
src/matching/refdata/impl/: RefDataLibrary.cpp  RefDataLibrary.h  RefDataManager.cpp  RefDataManager.h
src/matching/utils/: defs.h
src/msg/: message.h
src/tradingclientgw/: TradingClient.cpp
tests/: ByteBufferTest.cpp  CMakeLists.txt  MatchingEngineTest.cpp  OrderBookTest.cpp  ProtocolTest.cpp  Setup.hpp
